<resources>
    <string name="app_name">A-Notes</string>
    <string name="add_note_heading">Add Note</string>
    <string name="add">Add</string>
    <string name="update_note">Update Note</string>
    <string name="update">Update</string>
    <string name="no_notes_found">No Notes found</string>
    <string name="clear">Clear</string>
    <string name="note_name">Name</string>
    <string name="note_description">Description</string>
    <string name="notes_heading">Notes</string>
</resources>